added a set of go files to serve the following  HTTP requests: set-username, set-my-photo, get-my-conversations, get-conversation, send-message, set-group-name
